--- a/package.json
+++ b/package.json
@@ -4,15 +4,31 @@
     "description": "react + redux + hapi",
     "main": "src/index.js",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "build": "webpack",
+        "start": ""
     },
     "author": "kevinwqw",
     "license": "ISC",
     "devDependencies": {
-        "webpack": "^5.75.0"
+        "@babel/core": "^7.20.12",
+        "@babel/plugin-proposal-class-properties": "^7.18.6",
+        "@babel/plugin-transform-runtime": "^7.21.0",
+        "@babel/preset-env": "^7.20.2",
+        "@babel/preset-react": "^7.18.6",
+        "babel-loader": "^9.1.2",
+        "html-webpack-plugin": "^5.5.0",
+        "webpack": "^5.75.0",
+        "webpack-cli": "^5.0.1"
     },
     "dependencies": {
+        "@hapi/cookie": "^12.0.1",
+        "@hapi/crumb": "^9.0.1",
+        "@hapi/h2o2": "^10.0.1",
         "@hapi/hapi": "^21.3.0",
-        "@hapi/inert": "^7.0.1"
+        "@hapi/inert": "^7.0.1",
+        "axios": "^1.3.3",
+        "blipp": "^4.0.2",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0"
     }
 }
