--- a/package.json
+++ b/package.json
@@ -28,6 +28,9 @@
         "@hapi/inert": "^7.0.1",
         "axios": "^1.3.3",
         "blipp": "^4.0.2",
+        "lodash": "^4.17.21",
+        "mobx": "^6.8.0",
+        "mobx-react-lite": "^3.4.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0"
     }
