--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-    "name": "rrh-project",
+    "name": "rmh-project",
     "version": "1.0.0",
-    "description": "react + redux + hapi",
+    "description": "react + mobx + hapi",
     "main": "src/index.js",
     "scripts": {
         "build": "webpack",
