--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "main": "src/index.js",
     "scripts": {
         "build": "webpack",
-        "start": ""
+        "start": "npm run build && node ./src/server/dev.js",
+        "dev": "node .src/server/dev.js"
     },
     "author": "kevinwqw",
     "license": "ISC",
@@ -28,6 +29,7 @@
         "@hapi/inert": "^7.0.1",
         "axios": "^1.3.3",
         "blipp": "^4.0.2",
+        "core-js": "^3.29.0",
         "lodash": "^4.17.21",
         "mobx": "^6.8.0",
         "mobx-react-lite": "^3.4.0",
